<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/close_app"
        android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/close_app"/>
    <item
        android:id="@+id/stop_pointage"
        android:icon="@drawable/stop_icon"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/menu_stop_pointage"
        android:visible="false"/>
    <item
        android:id="@+id/refresh_web"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh_web"
        android:visible="false"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_menu_help"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>